<resources>
    <string name="app_name">SpoilAlert</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SpoilAlert</string>
    <string name="nav_header_subtitle">Track the expiration of groceries!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Log Groceries</string>
    <string name="menu_fridge">View Fridge</string>
    <string name="menu_store">Find Store</string>
    <string name="menu_join_house">Create/Join a House</string>
    <string name="menu_members">My House</string>

    <string name="log_hint">Enter grocery item…</string>
    <string name="quantity_hint">Enter Quantity...</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
    <string name="image_alt_desc">Spoil Alert Logo</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string-array name="Languages">
        <item>apple</item>
        <item>banana</item>
        <item>carrot</item>
        <item>ketchup</item>
        <item>spinach</item>
    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="app_desc">Track the expiration of your groceries</string>
    <string name="entry_prompt">To start tracking groceries:</string>
    <string name="house_create">Create a House</string>
    <string name="house_join">Join a House</string>
    <string name="house_create_desc">Create a "house" with your roommates to track all of your
        groceries and their expiration dates in a communal fridge.</string>
    <string name="house_join_desc">Not a member of a house? Enter the unique username for the
        house to join.</string>
    <string name="house_err_msg">Username already exists - please choose a new username.</string>
    <string name="house_success_msg">House successfully created. Share the unique username with
        your roommates to join.</string>
    <string name="house_err_msg_join">No house with the given username exists - please enter a new username.</string>
    <string name="house_success_msg_join">Successfully joined house.</string>
    <string name="house_input_hint">Unique Username</string>
    <string name="leave_house">LEAVE</string>
    <string name="house_members">House Members</string>
    <string name="wait_msg">Processing Image...</string>
    <string name="save_changes">Save Changes</string>
    <string name="bulletin_hint">Post Message...</string>
    <string name="house_fridge">House Fridge</string>
    <string name="house_bulletin">House Bulletin</string>
    <string name="fridge_is_empty">Fridge is empty.</string>
    <string name="reminder">Reminder:</string>
    <string name="helloWorld">Hello World</string>
    <string name="enter_shelf_life">Enter Shelf Life...</string>
    <string name="more_options">More Options...</string>
    <string name="home_header">Stock Your Fridge</string>
    <string name="home_item">Item:</string>
    <string name="home_qty">Quantity:</string>
    <string name="home_shelf">Optional Custom Shelf Life (days):</string>
</resources>