<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_groceries"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fridge"
            android:icon="@drawable/ic_kitchen_24px"
            android:title="@string/menu_fridge" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/nav_join_house"
            android:icon="@drawable/ic_house"
            android:title="@string/menu_join_house" />
    </group>
</menu>