<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.ucsb.cs.cs184.rhiannaso.spoilalert.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fridge"
        android:name="edu.ucsb.cs.cs184.rhiannaso.spoilalert.ui.fridge.FridgeFragment"
        android:label="@string/menu_fridge"
        tools:layout="@layout/fragment_fridge" />

    <fragment
        android:id="@+id/nav_store"
        android:name="edu.ucsb.cs.cs184.rhiannaso.spoilalert.ui.store.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/nav_join_house"
        android:name="edu.ucsb.cs.cs184.rhiannaso.spoilalert.ui.join_house.JoinHouseFragment"
        android:label="@string/menu_join_house"
        tools:layout="@layout/fragment_join_house" />
</navigation>