<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#99000000"
    android:paddingRight="@dimen/pop_up_padding"
    android:paddingLeft="@dimen/pop_up_padding">
    <androidx.cardview.widget.CardView
        android:id="@+id/item_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/pop_up_rad"
        android:layout_gravity="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/pop_up_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_name_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helloWorld"
                android:textSize="@dimen/pop_up_head"
                android:textStyle="bold"
                android:padding="@dimen/pop_up_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/reminder_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/item_name_popup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder"
                    android:textSize="@dimen/pop_up_subhead"
                    app:layout_constraintTop_toBottomOf="@+id/item_name_popup" />

                <Spinner
                    android:id="@+id/reminder_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    app:layout_constraintTop_toBottomOf="@+id/item_name_popup"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <Button
                android:layout_marginTop="@dimen/pop_up_padding"
                android:id="@+id/item_options_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminder_row" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>